# slskSticky

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  slsksticky.py
.github/workflows/: docker-publish.yml
src/: slsksticky.py
